@@ -15,3 +15,7 @@ Josua Groeger		<fractalus@gmx.net>
 
 Matt Kraai		<kraai@alumni.carnegiemellon.edu>
  - patches
+
+Koenraad Heijlen	<vipie@ulyssis.org>
+ - csv import filter
+ - fixes
