@@ -10,6 +10,5 @@ R. Shohn Trojacek	<snazzle@galvani.tamu.edu>
 ?			<antirez@invece.org>
 Shao Zhang		<shao@cia.com.au>
 Gustavo Niemeyer	<gustavo@niemeyer.net>
-Koenraad Heijlen	<vipie@ulyssis.org>
 
 See also AUTHORS
